# nori-server

./: README.md  main.py  pyproject.toml
src/: main.py
src/api/routes/: api.py
src/core/: config.py
src/core/settings/: app.py  base.py  development.py  production.py  test.py
