[tool.poetry]
name = "nori-server"
version = "0.1.0"
description = ""
authors = ["nori-team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
loguru = "^0.7.2"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
